fixed a spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -151,7 +151,7 @@ $second-color : #323232;
                 align-items: center;
 
                 p {
-                    width: 45%;
+                    width: 40%;
                     font-style: normal;
 
                     &:nth-child(even) {
